# advent_of_code_2023

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
day_01/: README.md  day_01.py
day_02/: README.md  day_02.py
day_03/: README.md  day_03.py
day_04/: README.md  day_04.py
day_05/: README.md  day_05.py
day_06/: README.md  day_06.py
day_07/: README.md  day_07.py
day_08/: README.md  day_08.py
day_09/: README.md  day_09.py
day_10/: README.md  day_10.py
day_10/input/: input_example_part_1.txt
day_11/: README.md  day_11.py
day_12/: day_12.py
day_14/: README.md  day_14.py
day_15/: README.md  day_15.py
day_16/: README.md  day_16.py
day_17/: README.md  day_17.py
day_18/: README.md  day_18.py
day_19/: README.md  day_19.py
day_20/: README.md  day_20.py
day_21/: README.md  day_21.py
day_xx/: day_xx.py
