[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["ster <ster@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
